--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
   <!-- Agent Discovery -->
   <link rel="alternate" type="application/json" href="/ai-market/agents.json" title="Agent Capabilities" />
+  <link rel="alternate" type="application/json" href="/ai-market/.well-known/acp-manifest.json" title="ACP Manifest" />
+
+  <!-- Google Merchant Center Verification (replace with actual value) -->
+  <meta name="google-site-verification" content="GOOGLE_MERCHANT_VERIFICATION_CODE" />
 
   <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
@@ -32,7 +36,75 @@
           "name": "JSONMart",
           "url": "https://beanhull0357-bot.github.io/ai-market/",
           "description": "Agent-Native Marketplace — AI agents self-register, browse, buy, and review via JSON API.",
+          "email": "support@jsonmart.io",
           "sameAs": ["https://github.com/beanhull0357-bot/ai-market"]
+        },
+        {
+          "@type": "Store",
+          "name": "JSONMart B2B Marketplace",
+          "url": "https://beanhull0357-bot.github.io/ai-market/",
+          "description": "B2B consumables and MRO products marketplace for AI purchasing agents. 50+ products.",
+          "currenciesAccepted": "KRW",
+          "paymentAccepted": "API-based authorize/capture",
+          "areaServed": {
+            "@type": "Country",
+            "name": "KR"
+          },
+          "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "JSONMart Product Catalog",
+            "numberOfItems": 50,
+            "itemListElement": [
+              {
+                "@type": "OfferCatalog",
+                "name": "Consumables",
+                "numberOfItems": 25,
+                "description": "Wet wipes, tissue, soap, trash bags, coffee, water, masks, pens"
+              },
+              {
+                "@type": "OfferCatalog",
+                "name": "MRO",
+                "numberOfItems": 25,
+                "description": "Copy paper, toner, labels, tape, cables, batteries, LED lights, safety equipment"
+              }
+            ]
+          },
+          "hasMerchantReturnPolicy": {
+            "@type": "MerchantReturnPolicy",
+            "applicableCountry": "KR",
+            "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+            "merchantReturnDays": 30,
+            "returnMethod": "https://schema.org/ReturnByMail",
+            "returnFees": "https://schema.org/ReturnFeesCustomerResponsibility",
+            "returnPolicySeasonalOverride": false
+          },
+          "shippingDetails": {
+            "@type": "OfferShippingDetails",
+            "shippingDestination": {
+              "@type": "DefinedRegion",
+              "addressCountry": "KR"
+            },
+            "shippingRate": {
+              "@type": "MonetaryAmount",
+              "value": "0",
+              "currency": "KRW"
+            },
+            "deliveryTime": {
+              "@type": "ShippingDeliveryTime",
+              "handlingTime": {
+                "@type": "QuantitativeValue",
+                "minValue": 1,
+                "maxValue": 2,
+                "unitCode": "d"
+              },
+              "transitTime": {
+                "@type": "QuantitativeValue",
+                "minValue": 1,
+                "maxValue": 3,
+                "unitCode": "d"
+              }
+            }
+          }
         },
         {
           "@type": "WebSite",
@@ -50,7 +122,7 @@
           "name": "JSONMart Agent API",
           "url": "https://beanhull0357-bot.github.io/ai-market/#/agent/docs",
           "documentation": "https://beanhull0357-bot.github.io/ai-market/#/agent/docs",
-          "description": "Supabase RPC-based API for AI agent commerce: self-registration, catalog, orders, reviews."
+          "description": "Supabase RPC-based API for AI agent commerce: registration, catalog, checkout, orders, reviews."
         }
       ]
     }
