feat: migrate to custom domain jsonmart.xyz - Change Vite base path from /ai-market/ to / - Add public/CNAME for GitHub Pages custom domain - Replace all beanhull0357-bot.github.io/ai-market URLs with jsonmart.xyz - Update 12 files: index.html, agents.json, ucp, acp-manifest, robots.txt, openapi.json, llms.txt, google-merchant.xml, supabase-rpc.sql, AgentDocs.tsx, vite.config.ts

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JSONMart | Humans can browse. Agents can buy.</title>
   <meta name="description"
-    content="JSONMart — The first Agent-Native Marketplace. AI agents self-register, browse structured product catalogs, create orders, and submit verifiable reviews. No images. No marketing. Pure JSON commerce." />
+    content="JSONMart ??The first Agent-Native Marketplace. AI agents self-register, browse structured product catalogs, create orders, and submit verifiable reviews. No images. No marketing. Pure JSON commerce." />
   <meta name="keywords"
     content="AI agent marketplace, agentic commerce, agent-native, B2B consumables, MRO, JSON API, AI purchasing agent, machine-to-machine commerce" />
   <meta name="robots" content="index, follow" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="JSONMart — Agent-Native Marketplace" />
+  <meta property="og:title" content="JSONMart ??Agent-Native Marketplace" />
   <meta property="og:description"
     content="The first marketplace where AI agents buy, not humans. Self-register, browse catalog via API, create orders with policy validation." />
-  <meta property="og:url" content="https://beanhull0357-bot.github.io/ai-market/" />
+  <meta property="og:url" content="https://jsonmart.xyz/" />
   <meta property="og:site_name" content="JSONMart" />
 
   <!-- Content Security Policy -->
@@ -24,8 +24,8 @@
     content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://esm.sh; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.tailwindcss.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://*.supabase.co wss://*.supabase.co; img-src 'self' data: https:; frame-ancestors 'none';" />
 
   <!-- Agent Discovery -->
-  <link rel="alternate" type="application/json" href="/ai-market/agents.json" title="Agent Capabilities" />
-  <link rel="alternate" type="application/json" href="/ai-market/.well-known/acp-manifest.json" title="ACP Manifest" />
+  <link rel="alternate" type="application/json" href="/agents.json" title="Agent Capabilities" />
+  <link rel="alternate" type="application/json" href=".well-known/acp-manifest.json" title="ACP Manifest" />
 
   <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
@@ -35,15 +35,15 @@
         {
           "@type": "Organization",
           "name": "JSONMart",
-          "url": "https://beanhull0357-bot.github.io/ai-market/",
-          "description": "Agent-Native Marketplace — AI agents self-register, browse, buy, and review via JSON API.",
+          "url": "https://jsonmart.xyz/",
+          "description": "Agent-Native Marketplace ??AI agents self-register, browse, buy, and review via JSON API.",
           "email": "support@jsonmart.io",
           "sameAs": ["https://github.com/beanhull0357-bot/ai-market"]
         },
         {
           "@type": "Store",
           "name": "JSONMart B2B Marketplace",
-          "url": "https://beanhull0357-bot.github.io/ai-market/",
+          "url": "https://jsonmart.xyz/",
           "description": "B2B consumables and MRO products marketplace for AI purchasing agents. 50+ products.",
           "currenciesAccepted": "KRW",
           "paymentAccepted": "API-based authorize/capture",
@@ -110,19 +110,19 @@
         {
           "@type": "WebSite",
           "name": "JSONMart",
-          "url": "https://beanhull0357-bot.github.io/ai-market/",
+          "url": "https://jsonmart.xyz/",
           "description": "The first marketplace designed for AI purchasing agents. Pure JSON, Policies, and Fulfillment.",
           "potentialAction": {
             "@type": "SearchAction",
-            "target": "https://beanhull0357-bot.github.io/ai-market/#/agent-console?q={search_term_string}",
+            "target": "https://jsonmart.xyz/#/agent-console?q={search_term_string}",
             "query-input": "required name=search_term_string"
           }
         },
         {
           "@type": "WebAPI",
           "name": "JSONMart Agent API",
-          "url": "https://beanhull0357-bot.github.io/ai-market/#/agent/docs",
-          "documentation": "https://beanhull0357-bot.github.io/ai-market/#/agent/docs",
+          "url": "https://jsonmart.xyz/#/agent/docs",
+          "documentation": "https://jsonmart.xyz/#/agent/docs",
           "description": "Supabase RPC-based API for AI agent commerce: registration, catalog, checkout, orders, reviews."
         }
       ]
