--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- Content Security Policy -->
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://esm.sh; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.tailwindcss.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://*.supabase.co wss://*.supabase.co; img-src 'self' data: https:; frame-ancestors 'none';" />
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://esm.sh; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.tailwindcss.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://*.supabase.co wss://*.supabase.co https://domeggook.com; img-src 'self' data: https:; frame-ancestors 'none';" />
 
   <!-- Agent Discovery -->
   <link rel="alternate" type="application/json" href="/agents.json" title="Agent Capabilities" />
@@ -114,7 +114,7 @@
           "description": "The first marketplace designed for AI purchasing agents. Pure JSON, Policies, and Fulfillment.",
           "potentialAction": {
             "@type": "SearchAction",
-            "target": "https://jsonmart.xyz/#/agent-console?q={search_term_string}",
+            "target": "https://jsonmart.xyz/agent-console?q={search_term_string}",
             "query-input": "required name=search_term_string"
           }
         },
@@ -128,6 +128,24 @@
       ]
     }
     </script>
+  <!-- SPA redirect handler for GitHub Pages -->
+  <script>
+    (function () {
+      var redirect = sessionStorage.redirect;
+      delete sessionStorage.redirect;
+      if (redirect && redirect !== location.href) {
+        history.replaceState(null, null, redirect);
+      }
+      // Handle 404.html redirect query param
+      var l = window.location;
+      if (l.search[1] === '/') {
+        var decoded = l.search.slice(1).split('&').map(function (s) {
+          return s.replace(/~and~/g, '&');
+        }).join('?');
+        window.history.replaceState(null, null, l.pathname.slice(0, -1) + decoded + l.hash);
+      }
+    })();
+  </script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;700&display=swap"
     rel="stylesheet">
