feat: add JSONMart SVG favicon {J}

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="apple-touch-icon" href="/favicon.svg" />
   <title>JSONMart | Humans can browse. Agents can buy.</title>
   <meta name="description"
     content="JSONMart ??The first Agent-Native Marketplace. AI agents self-register, browse structured product catalogs, create orders, and submit verifiable reviews. No images. No marketing. Pure JSON commerce." />
