fix: polish OG meta tags for SNS sharing - remove broken emoji, refine copy

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <link rel="apple-touch-icon" href="/favicon.svg" />
   <title>JSONMart | Humans can browse. Agents can buy.</title>
   <meta name="description"
-    content="JSONMart ??The first Agent-Native Marketplace. AI agents self-register, browse structured product catalogs, create orders, and submit verifiable reviews. No images. No marketing. Pure JSON commerce." />
+    content="Humans can browse. Agents can buy. The first Agent-Native Marketplace. No images. No marketing copy. Just pure JSON, Policies, and Fulfillment for AI Agents." />
   <meta name="keywords"
     content="AI agent marketplace, agentic commerce, agent-native, B2B consumables, MRO, JSON API, AI purchasing agent, machine-to-machine commerce" />
   <meta name="robots" content="index, follow" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="JSONMart ??Agent-Native Marketplace" />
+  <meta property="og:title" content="JSONMart | Humans can browse. Agents can buy." />
   <meta property="og:description"
-    content="The first marketplace where AI agents buy, not humans. Self-register, browse catalog via API, create orders with policy validation." />
+    content="The first Agent-Native Marketplace. No images. No marketing copy. Just pure JSON, Policies, and Fulfillment for AI Agents." />
   <meta property="og:url" content="https://jsonmart.xyz/" />
   <meta property="og:site_name" content="JSONMart" />
 
@@ -38,7 +38,7 @@
           "@type": "Organization",
           "name": "JSONMart",
           "url": "https://jsonmart.xyz/",
-          "description": "Agent-Native Marketplace ??AI agents self-register, browse, buy, and review via JSON API.",
+          "description": "The first Agent-Native Marketplace. Pure JSON, Policies, and Fulfillment for AI Agents.",
           "email": "support@jsonmart.io",
           "sameAs": ["https://github.com/beanhull0357-bot/ai-market"]
         },
