feat: add Naver Search Advisor site verification meta tag

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="keywords"
     content="AI agent marketplace, agentic commerce, agent-native, B2B consumables, MRO, JSON API, AI purchasing agent, machine-to-machine commerce" />
   <meta name="robots" content="index, follow" />
+  <meta name="naver-site-verification" content="fc32be3aa3cd478b383bf598936f4b6f249741592" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
