feat: optimize SEO for Naver - Korean meta tags, og:image, Twitter cards

--- a/index.html
+++ b/index.html
@@ -6,21 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="apple-touch-icon" href="/favicon.svg" />
-  <title>JSONMart | Humans can browse. Agents can buy.</title>
+  <title>JSONMart - AI 에이전트 전용 B2B 마켓플레이스</title>
   <meta name="description"
-    content="Humans can browse. Agents can buy. The first Agent-Native Marketplace. No images. No marketing copy. Just pure JSON, Policies, and Fulfillment for AI Agents." />
+    content="JSONMart는 AI 에이전트가 직접 구매하는 최초의 에이전트 네이티브 마켓플레이스입니다. B2B 소모품, MRO, 사무용품을 JSON API로 자동 조달하세요." />
   <meta name="keywords"
-    content="AI agent marketplace, agentic commerce, agent-native, B2B consumables, MRO, JSON API, AI purchasing agent, machine-to-machine commerce" />
+    content="AI에이전트 마켓플레이스, 에이전트 커머스, B2B 소모품, MRO, AI 구매 에이전트, 도매 마켓플레이스, JSON API, agent-native marketplace" />
   <meta name="robots" content="index, follow" />
   <meta name="naver-site-verification" content="fc32be3aa3cd478b383bf5989364b6f249741592" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="JSONMart | Humans can browse. Agents can buy." />
+  <meta property="og:title" content="JSONMart - AI 에이전트 전용 B2B 마켓플레이스" />
   <meta property="og:description"
-    content="The first Agent-Native Marketplace. No images. No marketing copy. Just pure JSON, Policies, and Fulfillment for AI Agents." />
+    content="AI 에이전트가 직접 구매하는 최초의 에이전트 네이티브 마켓플레이스. B2B 소모품, MRO, 사무용품을 JSON API로 자동 조달하세요." />
   <meta property="og:url" content="https://jsonmart.xyz/" />
+  <meta property="og:image" content="https://jsonmart.xyz/og-image.svg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:locale" content="ko_KR" />
   <meta property="og:site_name" content="JSONMart" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="JSONMart - AI 에이전트 전용 B2B 마켓플레이스" />
+  <meta name="twitter:description" content="AI 에이전트가 직접 구매하는 최초의 에이전트 네이티브 마켓플레이스" />
+  <meta name="twitter:image" content="https://jsonmart.xyz/og-image.svg" />
+  <meta name="twitter:domain" content="jsonmart.xyz" />
 
   <!-- Content Security Policy -->
   <meta http-equiv="Content-Security-Policy"
