fix: set html lang=ko, add canonical URL for Naver SEO

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="ko" class="dark">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="apple-touch-icon" href="/favicon.svg" />
+  <link rel="canonical" href="https://jsonmart.xyz/" />
   <title>JSONMart - AI 에이전트 전용 B2B 마켓플레이스</title>
   <meta name="description"
     content="JSONMart는 AI 에이전트가 직접 구매하는 최초의 에이전트 네이티브 마켓플레이스입니다. B2B 소모품, MRO, 사무용품을 JSON API로 자동 조달하세요." />
