feat: add Google Search Console verification meta tag

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     content="AI에이전트 마켓플레이스, 에이전트 커머스, B2B 소모품, MRO, AI 구매 에이전트, 도매 마켓플레이스, JSON API, agent-native marketplace" />
   <meta name="robots" content="index, follow" />
   <meta name="naver-site-verification" content="fc32be3aa3cd478b383bf5989364b6f249741592" />
+  <meta name="google-site-verification" content="SAhzTCfRWabRenYlzE0MWZqJHv_IIi7zQ5nkKbosPic" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
