fix: broaden product scope from B2B-only to all categories in SEO tags

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="apple-touch-icon" href="/favicon.svg" />
   <link rel="canonical" href="https://jsonmart.xyz/" />
-  <title>JSONMart - AI 에이전트 전용 B2B 마켓플레이스</title>
+  <title>JSONMart - AI 에이전트 전용 마켓플레이스</title>
   <meta name="description"
-    content="JSONMart는 AI 에이전트가 직접 구매하는 최초의 에이전트 네이티브 마켓플레이스입니다. B2B 소모품, MRO, 사무용품을 JSON API로 자동 조달하세요." />
+    content="JSONMart는 AI 에이전트가 직접 검색하고 구매하는 최초의 에이전트 네이티브 마켓플레이스입니다. 3,000개 이상의 다양한 상품을 JSON API로 자동 조달하세요." />
   <meta name="keywords"
-    content="AI에이전트 마켓플레이스, 에이전트 커머스, B2B 소모품, MRO, AI 구매 에이전트, 도매 마켓플레이스, JSON API, agent-native marketplace" />
+    content="AI에이전트 마켓플레이스, 에이전트 커머스, AI 구매 에이전트, 도매 마켓플레이스, JSON API, agent-native marketplace, AI 쇼핑, 자동 구매" />
   <meta name="robots" content="index, follow" />
   <meta name="naver-site-verification" content="fc32be3aa3cd478b383bf5989364b6f249741592" />
   <meta name="google-site-verification" content="SAhzTCfRWabRenYlzE0MWZqJHv_IIi7zQ5nkKbosPic" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="JSONMart - AI 에이전트 전용 B2B 마켓플레이스" />
+  <meta property="og:title" content="JSONMart - AI 에이전트 전용 마켓플레이스" />
   <meta property="og:description"
-    content="AI 에이전트가 직접 구매하는 최초의 에이전트 네이티브 마켓플레이스. B2B 소모품, MRO, 사무용품을 JSON API로 자동 조달하세요." />
+    content="AI 에이전트가 직접 검색하고 구매하는 최초의 에이전트 네이티브 마켓플레이스. 3,000개 이상의 다양한 상품을 JSON API로 자동 조달하세요." />
   <meta property="og:url" content="https://jsonmart.xyz/" />
   <meta property="og:image" content="https://jsonmart.xyz/og-image.svg" />
   <meta property="og:image:width" content="1200" />
@@ -30,8 +30,8 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="JSONMart - AI 에이전트 전용 B2B 마켓플레이스" />
-  <meta name="twitter:description" content="AI 에이전트가 직접 구매하는 최초의 에이전트 네이티브 마켓플레이스" />
+  <meta name="twitter:title" content="JSONMart - AI 에이전트 전용 마켓플레이스" />
+  <meta name="twitter:description" content="AI 에이전트가 직접 검색하고 구매하는 최초의 에이전트 네이티브 마켓플레이스" />
   <meta name="twitter:image" content="https://jsonmart.xyz/og-image.svg" />
   <meta name="twitter:domain" content="jsonmart.xyz" />
 
@@ -60,7 +60,7 @@
           "@type": "Store",
           "name": "JSONMart B2B Marketplace",
           "url": "https://jsonmart.xyz/",
-          "description": "B2B consumables and MRO products marketplace for AI purchasing agents. 50+ products.",
+          "description": "AI 에이전트가 직접 검색하고 구매하는 최초의 에이전트 네이티브 마켓플레이스. 3,000개 이상의 다양한 도매 상품.",
           "currenciesAccepted": "KRW",
           "paymentAccepted": "API-based authorize/capture",
           "areaServed": {
@@ -70,7 +70,7 @@
           "hasOfferCatalog": {
             "@type": "OfferCatalog",
             "name": "JSONMart Product Catalog",
-            "numberOfItems": 50,
+            "numberOfItems": 3000,
             "itemListElement": [
               {
                 "@type": "OfferCatalog",
