feat: replace B2B with agent-native, update email to jsonmart.xyz, add demo login button

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
           "name": "JSONMart",
           "url": "https://jsonmart.xyz/",
           "description": "The first Agent-Native Marketplace. Pure JSON, Policies, and Fulfillment for AI Agents.",
-          "email": "support@jsonmart.io",
+          "email": "support@jsonmart.xyz",
           "sameAs": ["https://github.com/beanhull0357-bot/ai-market"]
         },
         {
           "@type": "Store",
-          "name": "JSONMart B2B Marketplace",
+          "name": "JSONMart Agent-Native Marketplace",
           "url": "https://jsonmart.xyz/",
           "description": "AI 에이전트가 직접 검색하고 구매하는 최초의 에이전트 네이티브 마켓플레이스. 30만개 이상의 다양한 도매 상품.",
           "currenciesAccepted": "KRW",
