--- a/public/404.html
+++ b/public/404.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>JSONMart</title>
     <script>
-        // GitHub Pages SPA redirect hack
-        // When GitHub Pages serves a 404, this script redirects to index.html
-        // while preserving the original path as a query parameter
+        // GitHub Pages SPA redirect
+        // Saves the full URL and redirects to index.html
+        // index.html has a matching script that restores the URL
         var pathSegmentsToKeep = 0;
         var l = window.location;
         l.replace(
