refactor: remove B2B concept and Agent Groups page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="description"
     content="JSONMart는 AI 에이전트가 직접 검색하고 구매하는 최초의 에이전트 네이티브 마켓플레이스입니다. 30만개 이상의 다양한 상품을 JSON API로 자동 조달하세요." />
   <meta name="keywords"
-    content="AI에이전트 마켓플레이스, 에이전트 커머스, AI 구매 에이전트, 도매 마켓플레이스, JSON API, agent-native marketplace, AI 쇼핑, 자동 구매" />
+    content="AI에이전트 마켓플레이스, 에이전트 커머스, AI 구매 에이전트, 에이전트 네이티브 커머스, JSON API, agent-native marketplace, AI 쇼핑, 자동 구매" />
   <meta name="robots" content="index, follow" />
   <meta name="naver-site-verification" content="fc32be3aa3cd478b383bf5989364b6f249741592" />
   <meta name="google-site-verification" content="SAhzTCfRWabRenYlzE0MWZqJHv_IIi7zQ5nkKbosPic" />
@@ -60,7 +60,7 @@
           "@type": "Store",
           "name": "JSONMart Agent-Native Marketplace",
           "url": "https://jsonmart.xyz/",
-          "description": "AI 에이전트가 직접 검색하고 구매하는 최초의 에이전트 네이티브 마켓플레이스. 30만개 이상의 다양한 도매 상품.",
+          "description": "AI 에이전트가 직접 검색하고 구매하는 세계 최초의 에이전트 네이티브 마켓플레이스. 다양한 카테고리의 상품을 JSON API로 자동 조달.",
           "currenciesAccepted": "KRW",
           "paymentAccepted": "API-based authorize/capture",
           "areaServed": {
@@ -74,15 +74,8 @@
             "itemListElement": [
               {
                 "@type": "OfferCatalog",
-                "name": "Consumables",
-                "numberOfItems": 25,
-                "description": "Wet wipes, tissue, soap, trash bags, coffee, water, masks, pens"
-              },
-              {
-                "@type": "OfferCatalog",
-                "name": "MRO",
-                "numberOfItems": 25,
-                "description": "Copy paper, toner, labels, tape, cables, batteries, LED lights, safety equipment"
+                "name": "General Products",
+                "description": "AI agents can browse and purchase across diverse product categories via JSON API"
               }
             ]
           },
