feat: Korean SEO keywords, Naver favicon fix, agent discovery, remove product counts

--- a/index.html
+++ b/index.html
@@ -5,34 +5,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="apple-touch-icon" href="/favicon.svg" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" href="/favicon.ico" sizes="48x48" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="canonical" href="https://jsonmart.xyz/" />
-  <title>JSONMart - AI 에이전트 전용 마켓플레이스</title>
+  <title>제이슨마트(JSONMart) - AI 에이전트 전용 커머스 플랫폼</title>
   <meta name="description"
-    content="JSONMart는 AI 에이전트가 직접 검색하고 구매하는 최초의 에이전트 네이티브 마켓플레이스입니다. 30만개 이상의 다양한 상품을 JSON API로 자동 조달하세요." />
+    content="제이슨마트(JSONMart)는 AI 에이전트가 직접 검색하고 구매하는 세계 최초의 에이전트 네이티브 커머스 플랫폼입니다. 모든 상품을 JSON API로 자동 조달하세요." />
   <meta name="keywords"
-    content="AI에이전트 마켓플레이스, 에이전트 커머스, AI 구매 에이전트, 에이전트 네이티브 커머스, JSON API, agent-native marketplace, AI 쇼핑, 자동 구매" />
+    content="제이슨마트, JSONMart, 제이슨 마트, AI커머스, AI 커머스, 에이전트커머스, 에이전트 커머스, AI에이전트 마켓플레이스, AI 에이전트 쇼핑, AI 자동구매, 에이전트 네이티브, AI 구매대행, AI 조달, MCP 커머스, A2A 프로토콜, JSON API 쇼핑몰, agent-native marketplace, AI agent commerce, AI procurement, autonomous purchasing" />
   <meta name="robots" content="index, follow" />
   <meta name="naver-site-verification" content="fc32be3aa3cd478b383bf5989364b6f249741592" />
   <meta name="google-site-verification" content="SAhzTCfRWabRenYlzE0MWZqJHv_IIi7zQ5nkKbosPic" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="JSONMart - AI 에이전트 전용 마켓플레이스" />
+  <meta property="og:title" content="제이슨마트(JSONMart) - AI 에이전트 전용 커머스 플랫폼" />
   <meta property="og:description"
-    content="AI 에이전트가 직접 검색하고 구매하는 최초의 에이전트 네이티브 마켓플레이스. 30만개 이상의 다양한 상품을 JSON API로 자동 조달하세요." />
+    content="AI 에이전트가 직접 검색하고 구매하는 세계 최초의 에이전트 네이티브 커머스 플랫폼. 모든 상품을 JSON API로 자동 조달하세요." />
   <meta property="og:url" content="https://jsonmart.xyz/" />
-  <meta property="og:image" content="https://jsonmart.xyz/og-image.svg" />
+  <meta property="og:image" content="https://jsonmart.xyz/og-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:locale" content="ko_KR" />
-  <meta property="og:site_name" content="JSONMart" />
+  <meta property="og:site_name" content="제이슨마트 JSONMart" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="JSONMart - AI 에이전트 전용 마켓플레이스" />
-  <meta name="twitter:description" content="AI 에이전트가 직접 검색하고 구매하는 최초의 에이전트 네이티브 마켓플레이스" />
-  <meta name="twitter:image" content="https://jsonmart.xyz/og-image.svg" />
+  <meta name="twitter:title" content="제이슨마트(JSONMart) - AI 에이전트 전용 커머스 플랫폼" />
+  <meta name="twitter:description" content="AI 에이전트가 직접 검색하고 구매하는 세계 최초의 에이전트 네이티브 커머스 플랫폼" />
+  <meta name="twitter:image" content="https://jsonmart.xyz/og-image.png" />
   <meta name="twitter:domain" content="jsonmart.xyz" />
 
   <!-- Content Security Policy -->
@@ -51,6 +54,7 @@
         {
           "@type": "Organization",
           "name": "JSONMart",
+          "alternateName": "제이슨마트",
           "url": "https://jsonmart.xyz/",
           "description": "The first Agent-Native Marketplace. Pure JSON, Policies, and Fulfillment for AI Agents.",
           "email": "support@jsonmart.xyz",
@@ -70,12 +74,11 @@
           "hasOfferCatalog": {
             "@type": "OfferCatalog",
             "name": "JSONMart Product Catalog",
-            "numberOfItems": 300000,
             "itemListElement": [
               {
                 "@type": "OfferCatalog",
                 "name": "General Products",
-                "description": "AI agents can browse and purchase across diverse product categories via JSON API"
+                "description": "AI agents can browse and purchase across all product categories via JSON API"
               }
             ]
           },
@@ -119,6 +122,8 @@
         {
           "@type": "WebSite",
           "name": "JSONMart",
+          "alternateName": "제이슨마트",
+          "inLanguage": ["ko", "en"],
           "url": "https://jsonmart.xyz/",
           "description": "The first marketplace designed for AI purchasing agents. Pure JSON, Policies, and Fulfillment.",
           "potentialAction": {
